--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "cesium": "*",
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
   },
@@ -18,6 +19,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "vue-cli-plugin-cesium": "~1.1.7",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
